--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
     <script src="calc.js" defer></script>
 </head>
 <body>
+    <div id="container">
+        <div id="calc-wrapper">
+            <div id="col-display" class="col">
+                <div id="display">
+                    <div class="readout results"></div>
+                    <div class="readout input"></div>
+                </div>
+            </div>
+            <div id="col-buttons" class="col">
+                <div id="buttons-row-1">
+                    <button id="button-delete" class="button special"></button>
+                    <button id="button-clear" class="button special large"></button>
+                    <button id="button-+" class="button operator"></button>
+                </div>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
