added basic functionality, no logic

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
             </div>
             <div id="buttons-wrapper" class="col">
                 <div id="buttons-row-1" class="col row">
-                    <button id="delete" class="button special"></button>
-                    <button id="clear" class="button special large"></button>
+                    <button id="c" class="button special"></button>
+                    <button id="ce" class="button special"></button>
+                    <button id="del" class="button special"></button>
                     <button id="+" class="button operator"></button>
                 </div>
                 <div id="buttons-row-2" class="col row">
