added decimal functionality

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <button id="/" class="button operator"></button>
                 </div>
                 <div id="buttons-row-5" class="col row">
-                    <button id="." class="button numeric"></button>
+                    <button id="." class="button special"></button>
                     <button id="0" class="button numeric"></button>
                     <button id="enter" class="button special large"></button>
                 </div>
